[project]
name = "greenbone-community-docs"
version = "1.0.0"
description = "Documentation for the Greenbone Community Edition"
authors = [{ name = "Greenbone Networks", email = "info@greenbone.net" }]
requires-python = ">=3.10"
dependencies = [
    "Sphinx>=7.0.1",
    "myst-parser>=4.0.1",
    "sphinx>=8.1.3",
    "sphinx-tabs>=3.5.0",
    "sphinxext-opengraph>=0.13.0",
    "furo>=2025.12.19",
]

[dependency-groups]
dev = ["sphinx-autobuild>=2021.3.14"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
